Bug 285357 - images lost on htmlrepies
Summary: images lost on htmlrepies
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messagecomposer (other bugs)
Version First Reported In: GIT (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-30 23:29 UTC by simon
Modified: 2011-11-19 18:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2011-10-30 23:29:35 UTC
Version:           GIT (master) (using Devel) 
OS:                Linux

hi,

trying to reply but images are just shown as placeholders :(

Reproducible: Always

Steps to Reproduce:
reply html mail


Expected Results:  
keep images
Comment 1 Torgny Nyblom 2011-11-14 18:50:04 UTC
Git commit eef6c520e1eb950fddc8d1b98c21ae72081505ac by Torgny Nyblom.
Committed on 14/11/2011 at 19:49.
Pushed by tnyblom into branch 'master'.

Add support for multipart/related messages

Add support to templateparser for handling inline images.

BUG: 285357

M  +2    -2    messagecomposer/tests/messagefactorytest.cpp
M  +1    -0    messagecore/CMakeLists.txt
A  +115  -0    messagecore/imagecollector.cpp     [License: GPL (v2) (+Qt exception)]
A  +89   -0    messagecore/imagecollector.h     [License: GPL (v2) (+Qt exception)]
M  +62   -30   templateparser/templateparser.cpp
M  +21   -2    templateparser/templateparser.h

http://commits.kde.org/kdepim/eef6c520e1eb950fddc8d1b98c21ae72081505ac
Comment 2 simon 2011-11-15 10:34:52 UTC
works great, thanks
Comment 3 simon 2011-11-15 10:42:14 UTC
oops sorry, found a few mails that still trigger the bug (try to reply to a paypal payment info or a ebay message to see it) 
i can send you an example if you can't reproduce
Comment 4 Torgny Nyblom 2011-11-15 18:49:58 UTC
Please do
Comment 5 Torgny Nyblom 2011-11-19 18:51:14 UTC
Git commit da04f9e84dfc6a00ba578eec7cf797b418737012 by Torgny Nyblom.
Committed on 19/11/2011 at 19:37.
Pushed by tnyblom into branch 'master'.

Don't try and embed remote images

BUG: 285357

M  +5    -1    kpimtextedit/textedit.cpp

http://commits.kde.org/kdepimlibs/da04f9e84dfc6a00ba578eec7cf797b418737012