Add support for multipart/related messages

Add support to templateparser for handling inline images.

BUG: 285357